<resources>
    <string name="app_name">Microphone</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_recordings">Recordings</string>

    <string name="title_action_recordings">Recordings</string>
    <string name="title_action_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_recorder">Recorder Settings</string>
    <string name="pref_header_warning">Warning!</string>
    <string name="pref_header_about">About</string>

    <string name="pref_title_warning">
    </string>
    <string name="pref_summary_warning">
        Invalid preference value may cause the app to crash or lead to unexpected results. Please be sure to know what you are doing.
    </string>
    <string name="pref_title_about">
        Microphone v1.0
    </string>
    <string name="pref_summary_about">
        a free and open source audio recording app,\ndeveloped by: Toggle Corp.
    </string>

    <string name="pref_title_sample_rate">Audio sample rate</string>
    <string name="pref_title_channel_config">Channel configuration</string>
    <string name="pref_title_primary_audio_source">Primary audio source</string>
    <string name="pref_title_secondary_audio_source">Secondary audio source</string>


    <string-array name="pref_recorder_sample_rate_values">
        <item>48000</item>
        <item>44100</item>
        <item>22050</item>
        <item>16000</item>
        <item>8000</item>
    </string-array>
    <string-array name="pref_recorder_sample_rate_titles">
        <item>48000 Hz</item>
        <item>44100 Hz</item>
        <item>22050 Hz</item>
        <item>16000 Hz</item>
        <item>8000 Hz</item>
    </string-array>

    <string-array name="pref_recorder_channel_config_titles">
        <item>Mono</item>
        <item>Stereo</item>
    </string-array>
    <string-array name="pref_recorder_channel_config_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_recorder_audio_source_titles">
        <item>Default</item>
        <item>Camcorder</item>
        <item>Microphone</item>
        <item>Voice Call</item>
        <item>Voice Communication</item>
        <item>Voice Downlink</item>
        <item>Voice Recognition</item>
        <item>Voice Uplink</item>
    </string-array>
    <string-array name="pref_recorder_audio_source_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="pref_header_general">General</string>

    <string name="pref_title_background_record">Enable background recording</string>
    <string name="pref_description_background_record">
        Keep recording even when app is minimized
    </string>

</resources>
